--- a/pages/components/hotelSearchBar/hotelSearchBar.module.css
+++ b/pages/components/hotelSearchBar/hotelSearchBar.module.css
@@ -1,5 +1,4 @@
 .searchArea{
-
     width: 100%;
     height: 200px;
     background: linear-gradient(0deg, #006E5E 0%, #019D87 100%);
@@ -7,6 +6,7 @@
 
 .staysDiv{
     padding-top: 31px;
+    text-align: center;
 }
 
 .stays{
@@ -16,8 +16,6 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-left: 874px;
-    margin-top: 20px;
     text-decoration: none;
 }
 
@@ -40,7 +38,8 @@
     width: 1200px;
     height: 80px;
     border-radius: 1500px;
-    margin-left: 360px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 26px;
     display: flex  ;
     align-items: center;
@@ -50,7 +49,6 @@
 }
 
 .firstTextBox{
-    /* border: 1px solid green; */
     display: flex;
     align-items: center;
     align-self: center;
@@ -59,18 +57,9 @@
     margin-left: 39px;
 }
 
-.locationIcon{
-    /* margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 39px; */
-    /* margin-left: 39px; */
-    /* border: 1px solid orange; */
-}
-
 .textBox{
     padding-bottom: -10px;
     display: inline-block;
-    /* border: 1px solid blue; */
     padding-top: 16px;
     margin-left: 10px;
 }
@@ -102,18 +91,12 @@
     align-items: center;
     align-self: center;
     align-content: center;
-    /* border: 1px solid green; */
 }
-.datesIcon{
+.datesIcon,.profileIcon{
     margin-left: 10px;
 }
 
-.profileIcon{
-    margin-left: 10px;
-}
-
-.magnify{
-    /* margin-left: 190px; */
+.searchDiv{
     width: 50px;
     height: 50px;
     border-radius: 40px;
@@ -124,4 +107,47 @@
     justify-content: center;
     margin-right: 13px;
     background-color: #FEBE43;
+}
+
+@media (min-width:600px){
+    .settings,.searchIcon,.anyWhere{
+        display: none;
+    }
+}
+
+
+@media (max-width:600px){
+    .searchBox{
+            width: 90%;
+            height: 50px;
+        }
+    .secondTextBox,.karachiPakistan,.locationIcon,.searchDiv{
+        display: none;
+    }
+
+    .anyWhere{
+        color: #9E9E9E;
+        font-family: Inter;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    .whereTo{
+        color: #424242;
+        font-size: 15px;
+    }
+    .textBox{
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+    .searchIcon{
+        margin-left: 0;
+    }
+    .firstTextBox{
+        margin-left: 15px;
+    }
+    .settings{
+        margin-right: 13px;
+    }
 }
