--- a/pages/components/header/Header.module.css
+++ b/pages/components/header/Header.module.css
@@ -1,5 +1,5 @@
 .header{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     display: flex;
     width: 100%;
     align-content: center;
@@ -7,6 +7,7 @@
     justify-content:  center;
     padding: 0;
     margin: 0;
+    height: 100px;
 
 }
 
@@ -25,7 +26,7 @@
     align-content: center;
     justify-content: flex-start;
     width: 40%;
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
 
 }
 
@@ -33,7 +34,7 @@
 
 .rightSection{
     display: flex;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     text-align: center;
     align-items: center;
     align-self: center;
@@ -47,7 +48,7 @@
     /* margin-top: 36px;
     margin-bottom: 40px; */
     /* display: inline-block; */
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: inline-block;
     margin: 5px;
    
