--- a/pages/components/footer/Footer.module.css
+++ b/pages/components/footer/Footer.module.css
@@ -6,8 +6,7 @@
 }
 
 .textBlock{
-        display: inline-block;
-        /* border: 1px solid yellow; */
+        /* display: inline-block; */
         margin-left: 240px;
 }
 
@@ -36,8 +35,8 @@
         border-radius: 50px;
         display: inline-block;
         padding: 25px;
-        /* border: 1px solid yellow; */
         margin-left: 275px;
+        border: none;
 }
 
 .input::placeholder{
@@ -63,10 +62,9 @@
 
 .subsDiv p{
     /* display: inline-block; */
-    /* border: 1px solid red; */
-        margin-left:23px; 
+        margin-left:23px;
         margin-top: 16px;
-        color: #FFF;
+        color: #FFF;    
         text-align: center;
         /* font-family: Inter; */
         font-size: 16px;
@@ -78,7 +76,7 @@
     }
 
 .subsDiv svg{
-    /* border: 1px solid purple; */
+        /* border: 1px solid purple; */
         margin-top: 13px;
         margin-left: 104px;
 }
@@ -95,11 +93,25 @@
         height:226px ;
         background-color: white;
         width: 95%;
-        border-bottom: 1px solid #CCC;
-        margin-bottom: 5px;
+        /* border-top: 1px solid white; */
+        /* border-left: 1px solid white; */
+        /* border-right: 1px solid white; */
+        /* border-bottom: 1px solid #D9D9D9; */
         display: block;
         margin-left: auto;
         margin-right: auto;
+        align-items: stretch;
+        border: 1px solid black;
+    }
+
+    .heading{
+        color: #424242;
+        /* font-family: Inter; */
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-transform: capitalize;
     }
 
     .textBlock{
@@ -114,10 +126,10 @@
         margin-top: 46px;
         margin-left: 16px;
         display: inline-block;        
-        width: 300px;
+        width: 258px;
         height: 50px;
         border-radius: 100px;
-            /* padding: 25px; */
+        /* padding: 25px; */
         border: 1px solid #D9D9D9;
         vertical-align: top;
     }
@@ -138,16 +150,6 @@
         margin-left: 0px;
         display: inline-block;
         background-color: #006E5E;
-    }
-
-    .heading{
-        color: #424242;
-        /* font-family: Inter; */
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        text-transform: capitalize;
     }
     .paragraph{
         display: none;
