--- a/pages/components/footer/Footer.module.css
+++ b/pages/components/footer/Footer.module.css
@@ -93,15 +93,15 @@
         height:226px ;
         background-color: white;
         width: 95%;
-        /* border-top: 1px solid white; */
-        /* border-left: 1px solid white; */
-        /* border-right: 1px solid white; */
-        /* border-bottom: 1px solid #D9D9D9; */
+        border-top: 1px solid white;
+        border-left: 1px solid white;
+        border-right: 1px solid white;
+        border-bottom: 1px solid #D9D9D9;
         display: block;
         margin-left: auto;
         margin-right: auto;
         align-items: stretch;
-        border: 1px solid black;
+        /* border: 1px solid black; */
     }
 
     .heading{
