--- a/pages/components/soloTravel/soloTravel.module.css
+++ b/pages/components/soloTravel/soloTravel.module.css
@@ -47,17 +47,25 @@
     .soloTravel{
         /* display: block; */
         margin-top: 45px;
+        /* border: 1px solid red; */
+  
     }
 
     .container{
         margin-top: 0px;
-        margin-left: 0px;
+        width: 90%;
+        /* border: 1px solid red; */
+        /* display: flex; */
+        /* justify-content: center; */
     }
 
     .image{
+        display: flex;
+        /* border: 1px solid orange; */
         margin-top: 5px;
-        width: 390px ;
+        width: 100% ;
         height: 150px ;
+        /* justify-content: center; */
     }
 
     .text{
