--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -6,41 +6,58 @@
 }
 
 .filterArea{
-    background-color: red;
     margin-left: 12.5%;
-    width: 17.96875%;
-    height: auto;
-    margin-top: 40px;
+    width: 17.96875% ;
+    height: auto ;
+    margin-top: 3.73vh;
     display: inline-block;
+    vertical-align: top;
+}
+
+.mapSection{
+    width: 100%;
+    border: 1px solid #D9D9D9;
+    height: auto;
+    /* margin-bottom: 120px; */
+    border-radius: 10px;
+}
+
+
+.mapImage{
+    height: auto ;
+    width: 100% ; 
+}
+
+
+/*  CROSS CHECKING CONTINUED  */
+
+.paragraph{
+   
+    margin-top:1.11vh ;
+    margin-bottom: 1.75vh; 
+    /* width: 27% ; */
+    height: 17px ;
+    /* border: 1px solid red; */
+    /* margin-left:  36% ; */
+    /* margin-right: 36% ; */
+    color: #006E5E;
+    /* font-family: Inter; */
+    font-size: 87.5%;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+    /* margin-top: 9.33%; */
+    margin-bottom: 19px;
 }
 
 .hotelList{
 
     width: 55.98%;
     /* background-color: blue; */
-    display: inline-block;
-    margin-left: 1.041666667%;
-    margin-top: 42px;   
-    margin-right: 12.5%;
-}
+    display: inline-block ;
+    margin-left: 1.041666667% ;
+    margin-top: 4.10vh ;   
+    margin-right: 12.5% ;
 
-.mapArea{
-    height: 8.24%;
-    border: 1px solid black;   
-    width: 100%;
-}
-
-/* .mapImage{
-    height: 43.47826087% ;
-    width: 100% ;
-} */
-
-.paragraph{
-
-    /* justify-content: center;
-    align-items: center;
-    align-content: center;
-    align-self: center;
-    width: 100%;
-    border: 1px solid blue; */
 }
