--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -1,13 +1,6 @@
-.body{
-
-    /* background-color: blue; */
-    /* display: flex; */
-    /* border: 1px solid green; */
-}
-
 .filterArea{
-    margin-left: 12.5%;
-    width: 17.96875% ;
+    margin-left: 12.25vw; 
+    width: 17.60vw ;
     height: auto ;
     margin-top: 3.73vh;
     display: inline-block;
@@ -15,49 +8,53 @@
 }
 
 .mapSection{
-    width: 100%;
+    width: 17.69vw;
     border: 1px solid #D9D9D9;
     height: auto;
-    /* margin-bottom: 120px; */
     border-radius: 10px;
 }
 
-
 .mapImage{
     height: auto ;
-    width: 100% ; 
+    width: 17.69vw ; 
 }
 
-
-/*  CROSS CHECKING CONTINUED  */
-
-.paragraph{
+.mapSectionParagraph{
    
-    margin-top:1.11vh ;
-    margin-bottom: 1.75vh; 
-    /* width: 27% ; */
-    height: 17px ;
-    /* border: 1px solid red; */
-    /* margin-left:  36% ; */
-    /* margin-right: 36% ; */
+    margin-top:1.296296296vh ;
+    margin-bottom: 1.759259259vh; 
     color: #006E5E;
-    /* font-family: Inter; */
     font-size: 87.5%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-align: center;
-    /* margin-top: 9.33%; */
-    margin-bottom: 19px;
 }
 
 .hotelList{
-
-    width: 55.98%;
+    width: 54.86vw;
     /* background-color: blue; */
     display: inline-block ;
-    margin-left: 1.041666667% ;
-    margin-top: 4.10vh ;   
-    margin-right: 12.5% ;
+    margin-left: 1.01vw ;
+    margin-top: 3.888888889vh ;   
+    margin-right: 12.25vw ;
+}
 
+.compareProperties{
+    margin-top: 1.85vh;
+    border: 1px solid #D9D9D9;
+    width: 17.96vw;
+    height: 5.55vh;
+    border-radius: 9.25vh   ;
+    text-align: center;
+    align-content: center;
+}
+
+.compareProperties p{
+
+    color: #424242;
+    font-size: 87.5%;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
