--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -58,3 +58,36 @@
     font-weight: 400;
     line-height: normal;
 }
+
+.searchText{
+
+    font-size: 150%;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 2.77vh;
+    /* border: 1px solid red; */
+}
+
+.searchInput{
+    border: 1px solid #D9D9D9;
+    border-radius: 0.92vh;
+    width: 17.96875vw;
+    height: 5.55vh;
+}
+
+
+.searchIcon{
+    width: 1.5625vw;
+    height: 2.777vh;
+    margin-top: 1.388888889vh;
+    margin-bottom:1.388888889vh ;
+    margin-left: 0.729166667vw;
+    border: 1px solid red;
+    }
+
+.searchInput input{
+    width: 4.84375vw;
+    display: inline-block;
+
+}
