--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -20,7 +20,6 @@
 }
 
 .mapSectionParagraph{
-   
     margin-top:1.296296296vh ;
     margin-bottom: 1.759259259vh; 
     color: #006E5E;
@@ -46,21 +45,80 @@
     width: 17.96vw;
     height: 5.55vh;
     border-radius: 9.25vh   ;
-    text-align: center;
-    align-content: center;
+    /* text-align: center;
+    align-content: center; */
 }
 
 .compareProperties p{
-
     color: #424242;
     font-size: 87.5%;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    display: inline-block;
+    border: 1px solid red;
 }
 
-.searchText{
+.switch{
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 43.33%;
+    top: 28.33%;
+    border: 1px solid red;
+}
 
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider{
+    position: absolute ;
+    cursor: pointer;
+    transition: .4s ;
+    background-color: orange;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.slider:before{
+    background-color: white;
+    bottom: 2px;
+    left: 4px;
+    width: 22px ;
+    height: 22px ;
+    content : '' ;
+    position: absolute ;
+    transition: .4s;
+}
+
+input:checked + .slider{
+    background-color: orange;
+}
+
+input:focus + .slider{
+    box-shadow: 0 0 1px lightblue;
+}
+
+input:checked + .slider:before{
+    transform: translateX(26px);
+}
+
+.slider, .round{
+    border-radius: 25px;
+}
+
+.slider, .round:before{
+    border-radius: 25px;
+}
+
+
+
+.searchText{
     font-size: 150%;
     font-style: normal;
     font-weight: 600;
@@ -74,20 +132,44 @@
     border-radius: 0.92vh;
     width: 17.96875vw;
     height: 5.55vh;
+    position: relative;
 }
 
 
 .searchIcon{
     width: 1.5625vw;
     height: 2.777vh;
-    margin-top: 1.388888889vh;
-    margin-bottom:1.388888889vh ;
-    margin-left: 0.729166667vw;
-    border: 1px solid red;
+    top: 1.388888889vh;
+    bottom:1.388888889vh ;
+    left: 0.729166667vw;
+    /* border: 1px solid red; */
+    position: absolute;
     }
 
 .searchInput input{
-    width: 4.84375vw;
-    display: inline-block;
 
+    position: absolute ;
+    width: 84.35% ;
+    height: 100% ;
+    /* min-width: 100%; */
+    /* field-sizing: content; */
+    display: inline-block ;
+    color: #424242;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    /* border: 1px solid orange; */
+    left: 15.65%;
+    /* top: 35%;
+    bottom: 33.33%; */
+    border: none;
+}
+
+.searchInput input:focus {
+    outline: none;
+}
+
+.searchInput input::placeholder{
+    font-size: 100% ;
+    width: fit-content ;
 }
