--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -8,7 +8,7 @@
 }
 
 .mapSection{
-    width: 17.69vw;
+    width: 17.69vw ;
     border: 1px solid #D9D9D9;
     height: auto;
     border-radius: 10px;
@@ -40,33 +40,86 @@
 }
 
 .compareProperties{
+
     margin-top: 1.85vh;
     border: 1px solid #D9D9D9;
     width: 17.96vw;
+    display: flex;
+    align-items: center;
     height: 5.55vh;
-    border-radius: 9.25vh   ;
+    border-radius: 9.25vh ;
     /* text-align: center;
     align-content: center; */
+
 }
 
-.compareProperties p{
-    color: #424242;
-    font-size: 87.5%;
+.compareProperties  div p{
+
+    color: #424242 ;
+    font-size: 87.5% ;
     font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    display: inline-block;
-    border: 1px solid red;
+    font-weight: 400 ;
+    line-height: normal ;
+    /* display: inline-block ; */
+    /* margin-top: 3.666% ;
+    margin-bottom: 3.5% ;  */
+
+
+        /* align-content: center; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        /* align-content: center; */
+        /* align-items: center; */
+
+    border: 1px solid red ;
+    margin-left: 4.637681159% ;
+    height: 28.33% ;
+    width: 38.7%;
 }
 
 .switch{
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 43.33%;
-    top: 28.33%;
-    border: 1px solid red;
+
+    position: relative ;
+    display: inline-block ;
+    width: 17.401304348% ;
+    height: 43.33% ;
+    top: 3.33% ;
+    /* left: 15.913043478% ; */
+    left: 33.913043478%;
+    right : 5.507246377% ;
+    /* border: 1px solid red ;  */
+
 }
+
+/* @media (min-width:987px){
+
+    .switch{
+        left: 3%;
+
+    }
+
+}
+
+@media (min-width: 1350px  ){
+
+    .switch{
+        left: 15%  ;
+    }
+
+}
+
+@media (min-width:1600px){
+    .switch{
+        left:22.5%;
+    }
+}
+
+
+@media (min-width:1920px){
+    .switch{
+        left: 33.91% ;
+    }
+} */
 
 .switch input {
     opacity: 0;
@@ -87,13 +140,18 @@
 
 .slider:before{
     background-color: white;
-    bottom: 2px;
-    left: 4px;
-    width: 22px ;
-    height: 22px ;
+    bottom: 3.33% ;
+    top: 11.76% ;
+    left: 6.66% ;
+    right: 6.66%;
+    bottom: 11.76%;
+    width: 43.5% ;
+    height: 76.47% ;
+    /* right: %; */
     content : '' ;
     position: absolute ;
     transition: .4s;
+    /* border: 1px solid red; */
 }
 
 input:checked + .slider{
@@ -105,7 +163,7 @@ input:focus + .slider{
 }
 
 input:checked + .slider:before{
-    transform: translateX(26px);
+    transform: translateX(100%);
 }
 
 .slider, .round{
@@ -115,8 +173,6 @@ input:checked + .slider:before{
 .slider, .round:before{
     border-radius: 25px;
 }
-
-
 
 .searchText{
     font-size: 150%;
@@ -135,7 +191,6 @@ input:checked + .slider:before{
     position: relative;
 }
 
-
 .searchIcon{
     width: 1.5625vw;
     height: 2.777vh;
@@ -143,8 +198,8 @@ input:checked + .slider:before{
     bottom:1.388888889vh ;
     left: 0.729166667vw;
     /* border: 1px solid red; */
-    position: absolute;
-    }
+    position: absolute;    
+}
 
 .searchInput input{
 
@@ -154,15 +209,15 @@ input:checked + .slider:before{
     /* min-width: 100%; */
     /* field-sizing: content; */
     display: inline-block ;
-    color: #424242;
-    font-style: normal;
+    color: #424242 ;
+    font-style: normal ;
     font-weight: 400;
-    line-height: normal;
+    line-height: normal ; 
     /* border: 1px solid orange; */
     left: 15.65%;
     /* top: 35%;
     bottom: 33.33%; */
-    border: none;
+    border: none ;
 }
 
 .searchInput input:focus {
