--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -30,101 +30,59 @@
     text-align: center;
 }
 
-.hotelList{
-    width: 54.86vw;
-    /* background-color: blue; */
-    display: inline-block ;
-    margin-left: 1.01vw ;
-    margin-top: 3.888888889vh ;   
-    margin-right: 12.25vw ;
-}
-
 .compareProperties{
 
-    margin-top: 1.85vh;
-    border: 1px solid #D9D9D9;
-    width: 17.96vw;
+    margin-top: 1.851851852vh ;
+    border: 1px solid #D9D9D9 ;
+    width: 17.96875vw ;
     display: flex;
-    align-items: center;
-    height: 5.55vh;
+    align-items: center ;
+    height: 5.555555556vh ;
     border-radius: 9.25vh ;
-    /* text-align: center;
-    align-content: center; */
 
 }
 
-.compareProperties  div p{
+.compareProperties  p{
 
     color: #424242 ;
     font-size: 87.5% ;
     font-style: normal;
     font-weight: 400 ;
     line-height: normal ;
-    /* display: inline-block ; */
-    /* margin-top: 3.666% ;
-    margin-bottom: 3.5% ;  */
-
-
-        /* align-content: center; */
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* align-content: center; */
-        /* align-items: center; */
-
-    border: 1px solid red ;
-    margin-left: 4.637681159% ;
-    height: 28.33% ;
-    width: 38.7%;
+    margin-left: 4.517681159%;
+    width: 38.91% ; 
+    
 }
 
 .switch{
 
     position: relative ;
     display: inline-block ;
-    width: 17.401304348% ;
+    width: 17.391304348% ;
     height: 43.33% ;
     top: 3.33% ;
-    /* left: 15.913043478% ; */
-    left: 33.913043478%;
-    right : 5.507246377% ;
-    /* border: 1px solid red ;  */
-
+    margin-left: 33.793043478% ; 
+    margin-right : 5.387246377% ;
 }
-
-/* @media (min-width:987px){
-
-    .switch{
-        left: 3%;
-
-    }
-
-}
-
-@media (min-width: 1350px  ){
-
-    .switch{
-        left: 15%  ;
-    }
-
-}
-
-@media (min-width:1600px){
-    .switch{
-        left:22.5%;
-    }
-}
-
-
-@media (min-width:1920px){
-    .switch{
-        left: 33.91% ;
-    }
-} */
 
 .switch input {
+
     opacity: 0;
     width: 0;
     height: 0;
+
+}
+
+input:checked + .slider{
+    background-color: orange;
+}
+
+input:focus + .slider{
+    box-shadow: 0 0 1px lightblue;
+}
+
+input:checked + .slider:before{
+    transform: translateX(100%);
 }
 
 .slider{
@@ -145,33 +103,23 @@
     left: 6.66% ;
     right: 6.66%;
     bottom: 11.76%;
-    width: 43.5% ;
+    width: 43.33% ; 
     height: 76.47% ;
-    /* right: %; */
     content : '' ;
     position: absolute ;
     transition: .4s;
-    /* border: 1px solid red; */
+    /* border-radius: 9.25vh; */
 }
 
-input:checked + .slider{
-    background-color: orange;
+/* to be continued */
+
+.slider.round{
+    border-radius:  30px ;
+    /* border-radius: 43.33%    ; */
 }
 
-input:focus + .slider{
-    box-shadow: 0 0 1px lightblue;
-}
-
-input:checked + .slider:before{
-    transform: translateX(100%);
-}
-
-.slider, .round{
-    border-radius: 25px;
-}
-
-.slider, .round:before{
-    border-radius: 25px;
+.slider.round:before{
+    border-radius:  50% ;
 }
 
 .searchText{
@@ -179,45 +127,40 @@ input:checked + .slider:before{
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 2.77vh;
-    /* border: 1px solid red; */
+    margin-top: 2.2777777778vh;
 }
 
 .searchInput{
     border: 1px solid #D9D9D9;
     border-radius: 0.92vh;
     width: 17.96875vw;
-    height: 5.55vh;
+    height: 5.555555556vh;
     position: relative;
+    top: 1.296296296vh;
 }
 
 .searchIcon{
-    width: 1.5625vw;
-    height: 2.777vh;
-    top: 1.388888889vh;
-    bottom:1.388888889vh ;
-    left: 0.729166667vw;
-    /* border: 1px solid red; */
+    width: 8.695652174% ;
+    height: 50% ;
+    top: 25%;
+    bottom: 25% ;
+    left:4.057971014% ;
     position: absolute;    
 }
 
 .searchInput input{
 
     position: absolute ;
-    width: 84.35% ;
+    width: 84.347826087% ;
     height: 100% ;
-    /* min-width: 100%; */
-    /* field-sizing: content; */
     display: inline-block ;
     color: #424242 ;
     font-style: normal ;
     font-weight: 400;
     line-height: normal ; 
-    /* border: 1px solid orange; */
-    left: 15.65%;
-    /* top: 35%;
-    bottom: 33.33%; */
+    left: 15.652173913%;
     border: none ;
+    
 }
 
 .searchInput input:focus {
@@ -227,4 +170,18 @@ input:checked + .slider:before{
 .searchInput input::placeholder{
     font-size: 100% ;
     width: fit-content ;
+}
+
+.hotelList{
+    width: 54.86vw;
+    display: inline-block ;
+    margin-left: 1.01vw ;
+    margin-top: 3.888888889vh ;   
+    margin-right: 12.25vw ;
+}
+
+@media (max-width:600px){
+    .compareProperties,.mapSection,.searchInput,.searchText{
+        display: none;
+    }
 }
