--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -38,7 +38,7 @@
     display: flex;
     align-items: center ;
     height: 5.555555556vh ;
-    border-radius: 9.25vh ;
+    border-radius: 5.208333333vw/9.259259259vh ;
 
 }
 
@@ -50,8 +50,7 @@
     font-weight: 400 ;
     line-height: normal ;
     margin-left: 4.517681159%;
-    width: 38.91% ; 
-    
+    width: 38.91% ;    
 }
 
 .switch{
@@ -63,6 +62,7 @@
     top: 3.33% ;
     margin-left: 33.793043478% ; 
     margin-right : 5.387246377% ;
+    border-radius: 43.33%;
 }
 
 .switch input {
@@ -94,50 +94,43 @@ input:checked + .slider:before{
     bottom: 0;
     left: 0;
     right: 0;
+    border-radius: 50% / 100% ;
 }
 
 .slider:before{
-    background-color: white;
+    background-color: white ;
     bottom: 3.33% ;
     top: 11.76% ;
     left: 6.66% ;
-    right: 6.66%;
-    bottom: 11.76%;
+    right: 6.66% ;
+    bottom: 11.76% ;
     width: 43.33% ; 
     height: 76.47% ;
     content : '' ;
     position: absolute ;
     transition: .4s;
-    /* border-radius: 9.25vh; */
-}
-
-/* to be continued */
-
-.slider.round{
-    border-radius:  30px ;
-    /* border-radius: 43.33%    ; */
-}
-
-.slider.round:before{
     border-radius:  50% ;
 }
 
 .searchText{
-    font-size: 150%;
+    font-size: 150% ;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     margin-top: 2.2777777778vh;
+    color: #424242;
 }
 
 .searchInput{
     border: 1px solid #D9D9D9;
-    border-radius: 0.92vh;
+    border-radius: 0.520833333vw/0.92vh;
     width: 17.96875vw;
     height: 5.555555556vh;
     position: relative;
     top: 1.296296296vh;
 }
+
+/* to be continued */
 
 .searchIcon{
     width: 8.695652174% ;
@@ -151,7 +144,7 @@ input:checked + .slider:before{
 .searchInput input{
 
     position: absolute ;
-    width: 84.347826087% ;
+    width: 83% ;
     height: 100% ;
     display: inline-block ;
     color: #424242 ;
@@ -169,7 +162,7 @@ input:checked + .slider:before{
 
 .searchInput input::placeholder{
     font-size: 100% ;
-    width: fit-content ;
+    /* width: fit-content ; */
 }
 
 .hotelList{
@@ -178,6 +171,42 @@ input:checked + .slider:before{
     margin-left: 1.01vw ;
     margin-top: 3.888888889vh ;   
     margin-right: 12.25vw ;
+}
+
+.filterSection{
+    margin-top:4.62962963vh;
+
+}
+
+.mainHeading{
+    color: #424242;
+    font-size: 150%;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.hr{
+    margin-top: 1.203703704vh;
+    background: #D9D9D9;
+    width: 17.96875vw;
+    height: 0.092592593vh;
+}
+
+.form{
+    line-height: 3.703703704vh;
+    margin-top: 1.666666667vh;
+    font-style: normal;
+}
+
+.form label{
+    margin-left: 0.520833333vh;
+}
+
+.form input[type="checkbox"]{
+
+    width:1.041666667vw;
+    height: 1.851851852vh;
 }
 
 @media (max-width:600px){
