--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,9 @@ body {
   margin: 0;
 }
 
+:root {
+  --checkbox-border-color: red;
+  --checkbox-checked-color: #274c77;
+  --checkbox-hover-color: #a3cef1;
+  --checkbox-disabled-bg-color: #d9d9d9;
+}
