--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -5,6 +5,7 @@
     margin-top: 3.73vh;
     display: inline-block;
     vertical-align: top;
+    /* border: 1px solid red; */
 }
 
 .mapSection {
@@ -19,7 +20,7 @@
     width: 17.69vw;
 }
 
-.mapSectionParagraph {
+.mapParagraph {
     margin-top: 1.296296296vh;
     margin-bottom: 1.759259259vh;
     color: #006E5E;
@@ -213,20 +214,21 @@ input:checked+.slider:before {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 40px;
+    line-height: 3.703703704vh;
 }
 
-.form input[type="checkbox"] {  
+.form input[type="checkbox"],.form2 input[type="checkbox"]  {  
     appearance: none;
     height: 20px;
     width: 20px;
+    line-height: 1.851851852vh;
     border: 0.078125vw solid #9E9E9E;
     border-radius: 0.260416667vw;
     display: inline-block;
     position: relative;
 }
 
-.form input[type="checkbox"]:checked::after {
+.form input[type="checkbox"]:checked::after,.form2 input[type="checkbox"]:checked::after {
 
     content: '✔';
     font-size: 20px;
@@ -244,12 +246,138 @@ input:checked+.slider:before {
     /* background-color: #006E5E; */
 }
 
+.starRating {
+    margin-top: 3.611111111vh;
+    font-size: 112.5%;
+    color: #424242;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.form2{
+    margin-top: 1.666666667vh;
+}
+
+.form2 label {
+    margin-left: 0.520833333vw;
+    color: #424242;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 3.703703704vh;
+}
+
+.priceSection{
+    margin-top: 2.5vh;
+    border: 1px solid red ;
+    position: relative;
+}
+
+.Price{
+
+    color: #424242;
+    /* font-family: Inter; */
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+}
+
+.maxBox{
+    margin-left: 4.347826087%;
+}
+
+.minBox,.maxBox  {
+    margin-top: 1.851851852vh;
+    width: 47.826086957%;
+    height: 5.555555556vh;
+    border:1px solid #D9D9D9;
+    border-radius: 0.260416667vw ;
+    position: relative;
+    display: inline-block;
+    /* background-color: lightblue; */
+}
+
+
+.min,.max{
+    position: absolute;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    font-size: 16px;
+    left: 6.060606061%;
+    top: 18.333333333%;
+} 
+
+/* .dollarSign{
+    position: absolute;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    left: 6.060606061%;
+} */
+
+.minBox form  ,.maxBox form  {
+    left: 6.060606061%;
+    position: absolute;
+    top: 53.333333333%;
+}   
+
+
+
+
+/* Chrome, Safari, Edge, Opera */
+.minBox input::-webkit-outer-spin-button,
+.minBox input::-webkit-inner-spin-button,
+.maxBox input::-webkit-outer-spin-button,
+.maxBox input::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.minBox input[type=number] ,.maxBox input[type=number]  {
+  -moz-appearance: textfield;
+}
+
+
+.minBox input ,.maxBox input {
+    width: 75%;
+    font-weight: bold;
+    border: 0px solid;
+    font-size: 16px;
+    background-color: transparent;
+    /* position: absolute; */
+}
+
+.minBox input:focus  ,.maxBox input:focus  {
+    border: 0px solid;
+    outline: none;
+}
+
+.minBox input::placeholder,.maxBox input::placeholder     {
+    /* color: black; */
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+
+
+
+
 @media (max-width:600px) {
 
     .compareProperties,
     .mapSection,
     .searchInput,
-    .searchText {
+    .searchText,
+    .mainHeading,
+    .hr,.popularFilters,.form
+    {
         display: none;
     }
 }
