--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,9 @@ body {
   --checkbox-disabled-bg-color: #d9d9d9;
 }
 
+#original-range{
+  margin-top:1.388888889vh ;
+}
 
 .title {
   user-select: none;
@@ -22,7 +25,6 @@ body {
   font-family: monospace;
   font-weight: bold;
   text-align: center;
-  margin-top: 1.388888889vh;
   width: 17.69vw;
 }
 
